--- a/SERVICIOS/windows_service_status.yml
+++ b/SERVICIOS/windows_service_status.yml
@@ -1,29 +1,34 @@
-- name: Comprobar y asegurar servicio Windows en ejecución
+- name: Comprobar y asegurar servicios Windows en ejecución
   hosts: all
   gather_facts: no
 
   tasks:
-    - name: Consultar estado actual del servicio
-      win_service:
-        name: "{{ service_name }}"
-      register: initial_state
+    - name: Procesar servicios en orden
+      block:
 
-    - name: Arrancar el servicio si no está en running
-      win_service:
-        name: "{{ service_name }}"
-        state: started
-      when: initial_state.state != 'running'
+        - name: Consultar estado actual del servicio {{ item }}
+          ansible.windows.win_service:
+            name: "{{ item }}"
+          register: initial_state
 
-    - name: Reconsultar estado final del servicio
-      win_service:
-        name: "{{ service_name }}"
-      register: final_state
+        - name: Arrancar {{ item }} si no está en running
+          ansible.windows.win_service:
+            name: "{{ item }}"
+            state: started
+          when: initial_state.state != 'running'
 
-    - name: Validar estado final
-      fail:
-        msg: "ERROR: El servicio {{ service_name }} NO está levantado (estado: {{ final_state.state }})"
-      when: final_state.state != 'running'
+        - name: Reconsultar estado final de {{ item }}
+          ansible.windows.win_service:
+            name: "{{ item }}"
+          register: final_state
 
-    - name: Confirmar servicio levantado
-      debug:
-        msg: "OK: El servicio {{ service_name }} está LEVANTADO"
+        - name: Validar estado final de {{ item }}
+          fail:
+            msg: "ERROR: El servicio {{ item }} NO está levantado (estado: {{ final_state.state }})"
+          when: final_state.state != 'running'
+
+        - name: Confirmar {{ item }} levantado
+          debug:
+            msg: "OK: El servicio {{ item }} está LEVANTADO"
+
+      loop: "{{ services_ordered }}"
