--- a/SERVICIOS/windows_service_status.yml
+++ b/SERVICIOS/windows_service_status.yml
@@ -22,7 +22,8 @@
              | list }}
 
     - name: Enviar notificación por Telegram SOLO si se levantaron servicios
-      uri:
+      local_action:
+        module: uri
         url: "https://api.telegram.org/bot{{ telegram_token }}/sendMessage"
         method: POST
         body_format: json
@@ -33,7 +34,4 @@
             {{ servicios_levantados | join(', ') }}
         status_code: 200
       when: servicios_levantados | length > 0
-      delegate_to: localhost
       run_once: true
-      vars:
-        ansible_connection: local
